syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/vladoohr/simple_bank/pb";

message User {
    string username = 1;
    string email = 2;
    string full_name = 3;
    google.protobuf.Timestamp password_change_at = 4;
    google.protobuf.Timestamp created_at = 5;
}